# grayscott_k

./: CMakeLists.txt  README.md
src/: animation.py  animation_3D.py  clip.py  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex8.py  hdf5_test.py  main.cpp  main_3D.cpp  volumetric.py  vtk.py
